source/ocvWrp_nativeClasses_signatures.h


int   pCvVectorPoint2fLength(vector_Point2f* wrapper);

Point2f_t*   pCvVectorPoint2fGet(vector_Point2f* wrapper, int index);

Point2f_t*   pCvVectorPoint2fSet(vector_Point2f* wrapper, int index, Point2f_t* value);

void   pCvVectorPoint2fToArray(vector_Point2f* wrapper, CvPoint2fS* outstructs);

void   pCvVectorPoint2fFromArray(vector_Point2f* wrapper, CvPoint2fS* inpstructs);

vector_Range*   pCvVectorRangeCreate(int n);

void   pCvVectorRangeDelete(vector_Range* wrapper);

int   pCvVectorRangeLength(vector_Range* wrapper);

Range_t*   pCvVectorRangeGet(vector_Range* wrapper, int index);

Range_t*   pCvVectorRangeSet(vector_Range* wrapper, int index, Range_t* value);

void   pCvVectorRangeToArray(vector_Range* wrapper, CvRangeS* outstructs);

void   pCvVectorRangeFromArray(vector_Range* wrapper, CvRangeS* inpstructs);

vector_Rect*   pCvVectorRectCreate(int n);

void   pCvVectorRectDelete(vector_Rect* wrapper);

int   pCvVectorRectLength(vector_Rect* wrapper);

Rect_t*   pCvVectorRectGet(vector_Rect* wrapper, int index);

Rect_t*   pCvVectorRectSet(vector_Rect* wrapper, int index, Rect_t* value);

void   pCvVectorRectToArray(vector_Rect* wrapper, CvRectS* outstructs);

void   pCvVectorRectFromArray(vector_Rect* wrapper, CvRectS* inpstructs);

vector_Rect2d*   pCvVectorRect2dCreate(int n);

void   pCvVectorRect2dDelete(vector_Rect2d* wrapper);

int   pCvVectorRect2dLength(vector_Rect2d* wrapper);

Rect2d_t*   pCvVectorRect2dGet(vector_Rect2d* wrapper, int index);

Rect2d_t*   pCvVectorRect2dSet(vector_Rect2d* wrapper, int index, Rect2d_t* value);

void   pCvVectorRect2dToArray(vector_Rect2d* wrapper, CvRect2dS* outstructs);

void   pCvVectorRect2dFromArray(vector_Rect2d* wrapper, CvRect2dS* inpstructs);

vector_RotatedRect*   pCvVectorRotatedRectCreate(int n);

void   pCvVectorRotatedRectDelete(vector_RotatedRect* wrapper);

int   pCvVectorRotatedRectLength(vector_RotatedRect* wrapper);

RotatedRect_t*   pCvVectorRotatedRectGet(vector_RotatedRect* wrapper, int index);

RotatedRect_t*   pCvVectorRotatedRectSet(vector_RotatedRect* wrapper, int index, RotatedRect_t* value);

void   pCvVectorRotatedRectToArray(vector_RotatedRect* wrapper, CvRotatedRectS* outstructs);

void   pCvVectorRotatedRectFromArray(vector_RotatedRect* wrapper, CvRotatedRectS* inpstructs);

vector_Size*   pCvVectorSizeCreate(int n);

void   pCvVectorSizeDelete(vector_Size* wrapper);

int   pCvVectorSizeLength(vector_Size* wrapper);

Size_t*   pCvVectorSizeGet(vector_Size* wrapper, int index);

Size_t*   pCvVectorSizeSet(vector_Size* wrapper, int index, Size_t* value);

void   pCvVectorSizeToArray(vector_Size* wrapper, CvSizeS* outstructs);

void   pCvVectorSizeFromArray(vector_Size* wrapper, CvSizeS* inpstructs);

vector_String*   pCvVectorStringCreate(int n);

void   pCvVectorStringDelete(vector_String* wrapper);

int   pCvVectorStringLength(vector_String* wrapper);

string_t*   pCvVectorStringGet(vector_String* wrapper, int index);

string_t*   pCvVectorStringSet(vector_String* wrapper, int index, string_t* value);

vector_Target*   pCvVectordnn_TargetCreate(int n);

void   pCvVectordnn_TargetDelete(vector_Target* wrapper);

int   pCvVectordnn_TargetLength(vector_Target* wrapper);

dnn_Target_t*   pCvVectordnn_TargetGet(vector_Target* wrapper, int index);

dnn_Target_t*   pCvVectordnn_TargetSet(vector_Target* wrapper, int index, dnn_Target_t* value);

vector_UMat*   pCvVectorUMatCreate(int n);

void   pCvVectorUMatDelete(vector_UMat* wrapper);

int   pCvVectorUMatLength(vector_UMat* wrapper);

UMat_t*   pCvVectorUMatGet(vector_UMat* wrapper, int index);

UMat_t*   pCvVectorUMatSet(vector_UMat* wrapper, int index, UMat_t* value);

vector_Vec4f*   pCvVectorVec4fCreate(int n);

void   pCvVectorVec4fDelete(vector_Vec4f* wrapper);

int   pCvVectorVec4fLength(vector_Vec4f* wrapper);

Vec4f_t*   pCvVectorVec4fGet(vector_Vec4f* wrapper, int index);

Vec4f_t*   pCvVectorVec4fSet(vector_Vec4f* wrapper, int index, Vec4f_t* value);

void   pCvVectorVec4fToArray(vector_Vec4f* wrapper, CvVec4fS* outstructs);

void   pCvVectorVec4fFromArray(vector_Vec4f* wrapper, CvVec4fS* inpstructs);

vector_Vec6f*   pCvVectorVec6fCreate(int n);

void   pCvVectorVec6fDelete(vector_Vec6f* wrapper);

int   pCvVectorVec6fLength(vector_Vec6f* wrapper);

Vec6f_t*   pCvVectorVec6fGet(vector_Vec6f* wrapper, int index);

Vec6f_t*   pCvVectorVec6fSet(vector_Vec6f* wrapper, int index, Vec6f_t* value);

void   pCvVectorVec6fToArray(vector_Vec6f* wrapper, CvVec6fS* outstructs);

void   pCvVectorVec6fFromArray(vector_Vec6f* wrapper, CvVec6fS* inpstructs);

vector_char*   pCvVectorcharCreate(int n);

void   pCvVectorcharDelete(vector_char* wrapper);

int   pCvVectorcharLength(vector_char* wrapper);

char   pCvVectorcharGet(vector_char* wrapper, int index);

char   pCvVectorcharSet(vector_char* wrapper, int index, char value);

vector_double*   pCvVectordoubleCreate(int n);

void   pCvVectordoubleDelete(vector_double* wrapper);

int   pCvVectordoubleLength(vector_double* wrapper);

double   pCvVectordoubleGet(vector_double* wrapper, int index);

double   pCvVectordoubleSet(vector_double* wrapper, int index, double value);

vector_float*   pCvVectorfloatCreate(int n);

void   pCvVectorfloatDelete(vector_float* wrapper);

int   pCvVectorfloatLength(vector_float* wrapper);

float   pCvVectorfloatGet(vector_float* wrapper, int index);

float   pCvVectorfloatSet(vector_float* wrapper, int index, float value);

vector_int*   pCvVectorintCreate(int n);

void   pCvVectorintDelete(vector_int* wrapper);

int   pCvVectorintLength(vector_int* wrapper);

int   pCvVectorintGet(vector_int* wrapper, int index);

int   pCvVectorintSet(vector_int* wrapper, int index, int value);

vector_string*   pCvVector_stringCreate(int n);

void   pCvVector_stringDelete(vector_string* wrapper);

int   pCvVector_stringLength(vector_string* wrapper);

string_t*   pCvVector_stringGet(vector_string* wrapper, int index);

string_t*   pCvVector_stringSet(vector_string* wrapper, int index, string_t* value);

vector_uchar*   pCvVectorucharCreate(int n);

void   pCvVectorucharDelete(vector_uchar* wrapper);

int   pCvVectorucharLength(vector_uchar* wrapper);

uchar   pCvVectorucharGet(vector_uchar* wrapper, int index);

uchar   pCvVectorucharSet(vector_uchar* wrapper, int index, uchar value);

vector_vector_DMatch*   pCvVectorvector_DMatchCreate(int n);

void   pCvVectorvector_DMatchDelete(vector_vector_DMatch* wrapper);

int   pCvVectorvector_DMatchLength(vector_vector_DMatch* wrapper);

vector_DMatch*   pCvVectorvector_DMatchGet(vector_vector_DMatch* wrapper, int index);

vector_DMatch*   pCvVectorvector_DMatchSet(vector_vector_DMatch* wrapper, int index, vector_DMatch* value);

vector_vector_KeyPoint*   pCvVectorvector_KeyPointCreate(int n);

void   pCvVectorvector_KeyPointDelete(vector_vector_KeyPoint* wrapper);

int   pCvVectorvector_KeyPointLength(vector_vector_KeyPoint* wrapper);

vector_KeyPoint*   pCvVectorvector_KeyPointGet(vector_vector_KeyPoint* wrapper, int index);

vector_KeyPoint*   pCvVectorvector_KeyPointSet(vector_vector_KeyPoint* wrapper, int index, vector_KeyPoint* value);

vector_vector_Mat*   pCvVectorvector_MatCreate(int n);

void   pCvVectorvector_MatDelete(vector_vector_Mat* wrapper);

int   pCvVectorvector_MatLength(vector_vector_Mat* wrapper);

vector_Mat*   pCvVectorvector_MatGet(vector_vector_Mat* wrapper, int index);

vector_Mat*   pCvVectorvector_MatSet(vector_vector_Mat* wrapper, int index, vector_Mat* value);

vector_vector_MatShape*   pCvVectorvector_MatShapeCreate(int n);

void   pCvVectorvector_MatShapeDelete(vector_vector_MatShape* wrapper);

int   pCvVectorvector_MatShapeLength(vector_vector_MatShape* wrapper);

vector_MatShape*   pCvVectorvector_MatShapeGet(vector_vector_MatShape* wrapper, int index);

vector_MatShape*   pCvVectorvector_MatShapeSet(vector_vector_MatShape* wrapper, int index, vector_MatShape* value);

vector_vector_Point*   pCvVectorvector_PointCreate(int n);

void   pCvVectorvector_PointDelete(vector_vector_Point* wrapper);