Delphi/unOcvWrapper_nativeClasses.pas

Function    pCvVectorPoint2fLength(const wrapper: PCvvector_Point2f): Integer; cdecl;
Function    pCvVectorPoint2fGet(const wrapper: PCvvector_Point2f; const index: Integer): PCvPoint2f_t; cdecl;
Function    pCvVectorPoint2fSet(const wrapper: PCvvector_Point2f; const index: Integer; const val: PCvPoint2f_t): PCvPoint2f_t; cdecl;
Procedure   pCvVectorPoint2fToArray(const wrapper: PCvvector_Point2f; outvalues: PCvPoint2fS); cdecl;
Procedure   pCvVectorPoint2fFromArray(const wrapper: PCvvector_Point2f; inpvalues: PCvPoint2fS); cdecl;
Function    pCvVectorRangeCreate(const n: Integer): PCvvector_Range; cdecl;
Procedure   pCvVectorRangeDelete(const wrapper: PCvvector_Range); cdecl;
Function    pCvVectorRangeLength(const wrapper: PCvvector_Range): Integer; cdecl;
Function    pCvVectorRangeGet(const wrapper: PCvvector_Range; const index: Integer): PCvRange_t; cdecl;
Function    pCvVectorRangeSet(const wrapper: PCvvector_Range; const index: Integer; const val: PCvRange_t): PCvRange_t; cdecl;
Procedure   pCvVectorRangeToArray(const wrapper: PCvvector_Range; outvalues: PCvRangeS); cdecl;
Procedure   pCvVectorRangeFromArray(const wrapper: PCvvector_Range; inpvalues: PCvRangeS); cdecl;
Function    pCvVectorRectCreate(const n: Integer): PCvvector_Rect; cdecl;
Procedure   pCvVectorRectDelete(const wrapper: PCvvector_Rect); cdecl;
Function    pCvVectorRectLength(const wrapper: PCvvector_Rect): Integer; cdecl;
Function    pCvVectorRectGet(const wrapper: PCvvector_Rect; const index: Integer): PCvRect_t; cdecl;
Function    pCvVectorRectSet(const wrapper: PCvvector_Rect; const index: Integer; const val: PCvRect_t): PCvRect_t; cdecl;
Procedure   pCvVectorRectToArray(const wrapper: PCvvector_Rect; outvalues: PCvRectS); cdecl;
Procedure   pCvVectorRectFromArray(const wrapper: PCvvector_Rect; inpvalues: PCvRectS); cdecl;
Function    pCvVectorRect2dCreate(const n: Integer): PCvvector_Rect2d; cdecl;
Procedure   pCvVectorRect2dDelete(const wrapper: PCvvector_Rect2d); cdecl;
Function    pCvVectorRect2dLength(const wrapper: PCvvector_Rect2d): Integer; cdecl;
Function    pCvVectorRect2dGet(const wrapper: PCvvector_Rect2d; const index: Integer): PCvRect2d_t; cdecl;
Function    pCvVectorRect2dSet(const wrapper: PCvvector_Rect2d; const index: Integer; const val: PCvRect2d_t): PCvRect2d_t; cdecl;
Procedure   pCvVectorRect2dToArray(const wrapper: PCvvector_Rect2d; outvalues: PCvRect2dS); cdecl;
Procedure   pCvVectorRect2dFromArray(const wrapper: PCvvector_Rect2d; inpvalues: PCvRect2dS); cdecl;
Function    pCvVectorRotatedRectCreate(const n: Integer): PCvvector_RotatedRect; cdecl;
Procedure   pCvVectorRotatedRectDelete(const wrapper: PCvvector_RotatedRect); cdecl;
Function    pCvVectorRotatedRectLength(const wrapper: PCvvector_RotatedRect): Integer; cdecl;
Function    pCvVectorRotatedRectGet(const wrapper: PCvvector_RotatedRect; const index: Integer): PCvRotatedRect_t; cdecl;
Function    pCvVectorRotatedRectSet(const wrapper: PCvvector_RotatedRect; const index: Integer; const val: PCvRotatedRect_t): PCvRotatedRect_t; cdecl;
Procedure   pCvVectorRotatedRectToArray(const wrapper: PCvvector_RotatedRect; outvalues: PCvRotatedRectS); cdecl;
Procedure   pCvVectorRotatedRectFromArray(const wrapper: PCvvector_RotatedRect; inpvalues: PCvRotatedRectS); cdecl;
Function    pCvVectorSizeCreate(const n: Integer): PCvvector_Size; cdecl;
Procedure   pCvVectorSizeDelete(const wrapper: PCvvector_Size); cdecl;
Function    pCvVectorSizeLength(const wrapper: PCvvector_Size): Integer; cdecl;
Function    pCvVectorSizeGet(const wrapper: PCvvector_Size; const index: Integer): PCvSize_t; cdecl;
Function    pCvVectorSizeSet(const wrapper: PCvvector_Size; const index: Integer; const val: PCvSize_t): PCvSize_t; cdecl;
Procedure   pCvVectorSizeToArray(const wrapper: PCvvector_Size; outvalues: PCvSizeS); cdecl;
Procedure   pCvVectorSizeFromArray(const wrapper: PCvvector_Size; inpvalues: PCvSizeS); cdecl;
Function    pCvVectorStringCreate(const n: Integer): PCvvector_String; cdecl;
Procedure   pCvVectorStringDelete(const wrapper: PCvvector_String); cdecl;
Function    pCvVectorStringLength(const wrapper: PCvvector_String): Integer; cdecl;
Function    pCvVectorStringGet(const wrapper: PCvvector_String; const index: Integer): PCvstring_t; cdecl;
Function    pCvVectorStringSet(const wrapper: PCvvector_String; const index: Integer; const val: PCvstring_t): PCvstring_t; cdecl;
Function    pCvVectordnn_TargetCreate(const n: Integer): PCvvector_Target; cdecl;
Procedure   pCvVectordnn_TargetDelete(const wrapper: PCvvector_Target); cdecl;
Function    pCvVectordnn_TargetLength(const wrapper: PCvvector_Target): Integer; cdecl;
Function    pCvVectordnn_TargetGet(const wrapper: PCvvector_Target; const index: Integer): PCvdnn_Target_t; cdecl;
Function    pCvVectordnn_TargetSet(const wrapper: PCvvector_Target; const index: Integer; const val: PCvdnn_Target_t): PCvdnn_Target_t; cdecl;
Function    pCvVectorUMatCreate(const n: Integer): PCvvector_UMat; cdecl;
Procedure   pCvVectorUMatDelete(const wrapper: PCvvector_UMat); cdecl;
Function    pCvVectorUMatLength(const wrapper: PCvvector_UMat): Integer; cdecl;
Function    pCvVectorUMatGet(const wrapper: PCvvector_UMat; const index: Integer): PCvUMat_t; cdecl;
Function    pCvVectorUMatSet(const wrapper: PCvvector_UMat; const index: Integer; const val: PCvUMat_t): PCvUMat_t; cdecl;
Function    pCvVectorVec4fCreate(const n: Integer): PCvvector_Vec4f; cdecl;
Procedure   pCvVectorVec4fDelete(const wrapper: PCvvector_Vec4f); cdecl;
Function    pCvVectorVec4fLength(const wrapper: PCvvector_Vec4f): Integer; cdecl;
Function    pCvVectorVec4fGet(const wrapper: PCvvector_Vec4f; const index: Integer): PCvVec4f_t; cdecl;
Function    pCvVectorVec4fSet(const wrapper: PCvvector_Vec4f; const index: Integer; const val: PCvVec4f_t): PCvVec4f_t; cdecl;
Procedure   pCvVectorVec4fToArray(const wrapper: PCvvector_Vec4f; outvalues: PCvVec4fS); cdecl;
Procedure   pCvVectorVec4fFromArray(const wrapper: PCvvector_Vec4f; inpvalues: PCvVec4fS); cdecl;
Function    pCvVectorVec6fCreate(const n: Integer): PCvvector_Vec6f; cdecl;
Procedure   pCvVectorVec6fDelete(const wrapper: PCvvector_Vec6f); cdecl;
Function    pCvVectorVec6fLength(const wrapper: PCvvector_Vec6f): Integer; cdecl;
Function    pCvVectorVec6fGet(const wrapper: PCvvector_Vec6f; const index: Integer): PCvVec6f_t; cdecl;
Function    pCvVectorVec6fSet(const wrapper: PCvvector_Vec6f; const index: Integer; const val: PCvVec6f_t): PCvVec6f_t; cdecl;
Procedure   pCvVectorVec6fToArray(const wrapper: PCvvector_Vec6f; outvalues: PCvVec6fS); cdecl;
Procedure   pCvVectorVec6fFromArray(const wrapper: PCvvector_Vec6f; inpvalues: PCvVec6fS); cdecl;
Function    pCvVectorcharCreate(const n: Integer): PCvvector_char; cdecl;
Procedure   pCvVectorcharDelete(const wrapper: PCvvector_char); cdecl;
Function    pCvVectorcharLength(const wrapper: PCvvector_char): Integer; cdecl;
Function    pCvVectorcharGet(const wrapper: PCvvector_char; const index: Integer): Char; cdecl;
Function    pCvVectorcharSet(const wrapper: PCvvector_char; const index: Integer; const val: Char): Char; cdecl;
Function    pCvVectordoubleCreate(const n: Integer): PCvvector_double; cdecl;
Procedure   pCvVectordoubleDelete(const wrapper: PCvvector_double); cdecl;
Function    pCvVectordoubleLength(const wrapper: PCvvector_double): Integer; cdecl;
Function    pCvVectordoubleGet(const wrapper: PCvvector_double; const index: Integer): Double; cdecl;
Function    pCvVectordoubleSet(const wrapper: PCvvector_double; const index: Integer; const val: Double): Double; cdecl;
Function    pCvVectorfloatCreate(const n: Integer): PCvvector_float; cdecl;
Procedure   pCvVectorfloatDelete(const wrapper: PCvvector_float); cdecl;
Function    pCvVectorfloatLength(const wrapper: PCvvector_float): Integer; cdecl;
Function    pCvVectorfloatGet(const wrapper: PCvvector_float; const index: Integer): Single; cdecl;
Function    pCvVectorfloatSet(const wrapper: PCvvector_float; const index: Integer; const val: Single): Single; cdecl;
Function    pCvVectorintCreate(const n: Integer): PCvvector_int; cdecl;
Procedure   pCvVectorintDelete(const wrapper: PCvvector_int); cdecl;
Function    pCvVectorintLength(const wrapper: PCvvector_int): Integer; cdecl;
Function    pCvVectorintGet(const wrapper: PCvvector_int; const index: Integer): Integer; cdecl;
Function    pCvVectorintSet(const wrapper: PCvvector_int; const index: Integer; const val: Integer): Integer; cdecl;
Function    pCvVector_stringCreate(const n: Integer): PCvvector__string; cdecl;
Procedure   pCvVector_stringDelete(const wrapper: PCvvector__string); cdecl;
Function    pCvVector_stringLength(const wrapper: PCvvector__string): Integer; cdecl;
Function    pCvVector_stringGet(const wrapper: PCvvector__string; const index: Integer): PCvstring_t; cdecl;
Function    pCvVector_stringSet(const wrapper: PCvvector__string; const index: Integer; const val: PCvstring_t): PCvstring_t; cdecl;
Function    pCvVectorucharCreate(const n: Integer): PCvvector_uchar; cdecl;
Procedure   pCvVectorucharDelete(const wrapper: PCvvector_uchar); cdecl;
Function    pCvVectorucharLength(const wrapper: PCvvector_uchar): Integer; cdecl;
Function    pCvVectorucharGet(const wrapper: PCvvector_uchar; const index: Integer): Byte; cdecl;
Function    pCvVectorucharSet(const wrapper: PCvvector_uchar; const index: Integer; const val: Byte): Byte; cdecl;
Function    pCvVectorvector_DMatchCreate(const n: Integer): PCvvector_vector_DMatch; cdecl;
Procedure   pCvVectorvector_DMatchDelete(const wrapper: PCvvector_vector_DMatch); cdecl;
Function    pCvVectorvector_DMatchLength(const wrapper: PCvvector_vector_DMatch): Integer; cdecl;
Function    pCvVectorvector_DMatchGet(const wrapper: PCvvector_vector_DMatch; const index: Integer): PCvvector_vector_DMatch; cdecl;
Function    pCvVectorvector_DMatchSet(const wrapper: PCvvector_vector_DMatch; const index: Integer; const val: PCvvector_vector_DMatch): PCvvector_vector_DMatch; cdecl;
Function    pCvVectorvector_KeyPointCreate(const n: Integer): PCvvector_vector_KeyPoint; cdecl;
Procedure   pCvVectorvector_KeyPointDelete(const wrapper: PCvvector_vector_KeyPoint); cdecl;
Function    pCvVectorvector_KeyPointLength(const wrapper: PCvvector_vector_KeyPoint): Integer; cdecl;
Function    pCvVectorvector_KeyPointGet(const wrapper: PCvvector_vector_KeyPoint; const index: Integer): PCvvector_vector_KeyPoint; cdecl;
Function    pCvVectorvector_KeyPointSet(const wrapper: PCvvector_vector_KeyPoint; const index: Integer; const val: PCvvector_vector_KeyPoint): PCvvector_vector_KeyPoint; cdecl;
Function    pCvVectorvector_MatCreate(const n: Integer): PCvvector_vector_Mat; cdecl;
Procedure   pCvVectorvector_MatDelete(const wrapper: PCvvector_vector_Mat); cdecl;
Function    pCvVectorvector_MatLength(const wrapper: PCvvector_vector_Mat): Integer; cdecl;
Function    pCvVectorvector_MatGet(const wrapper: PCvvector_vector_Mat; const index: Integer): PCvvector_vector_Mat; cdecl;
Function    pCvVectorvector_MatSet(const wrapper: PCvvector_vector_Mat; const index: Integer; const val: PCvvector_vector_Mat): PCvvector_vector_Mat; cdecl;
Function    pCvVectorvector_MatShapeCreate(const n: Integer): PCvvector_vector_MatShape; cdecl;
Procedure   pCvVectorvector_MatShapeDelete(const wrapper: PCvvector_vector_MatShape); cdecl;
Function    pCvVectorvector_MatShapeLength(const wrapper: PCvvector_vector_MatShape): Integer; cdecl;
Function    pCvVectorvector_MatShapeGet(const wrapper: PCvvector_vector_MatShape; const index: Integer): PCvvector_vector_MatShape; cdecl;
Function    pCvVectorvector_MatShapeSet(const wrapper: PCvvector_vector_MatShape; const index: Integer; const val: PCvvector_vector_MatShape): PCvvector_vector_MatShape; cdecl;
Function    pCvVectorvector_PointCreate(const n: Integer): PCvvector_vector_Point; cdecl;
Procedure   pCvVectorvector_PointDelete(const wrapper: PCvvector_vector_Point); cdecl;
